YH-1635:added-pytest-allure-markings_refactored_some_tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,8 +8,12 @@ log_cli_date_format=%Y-%m-%d %H:%M:%S
 
 
 markers =
-smoke: Smoke тесты
+smoke: Смок тесты
 critical: Критичные тесты
 regression: Регрессионные тесты
-api: API тесты
-ui: UI тесты
+slow: Медленные тесты
+negative: Негативные тесты
+api: API-тесты
+ui: UI-тесты
+db: DB-тесты
+healthcheck: Cтатусы сервисов
